# AI_FaceDetector

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  main.cpp
.github/workflows/: ci.yml
Core/: AIFaceDetector.cpp  AIProcessor.cpp  AIProcessor.h  EditStack.cpp  ExposureOperation.cpp  FaceDetectionConstants.h  FaceDetector.cpp  FallbackDetector.cpp  FallbackDetector.h  GPUImageProcessor.cpp  GPUImageProcessor.h  ImageProcessingTypes.h  ImageProcessor.cpp  LUT.cpp  MagicNumbers.h  Orchestrator.cpp  PluginConfiguration.cpp  PostProcessingStrategy.cpp  PostProcessingStrategy.h  ProcessingPipeline.cpp  Segmenter.cpp  TraceScope.h  TypeAliases.h
Core/Plugins/: CoreFaceDetectorFwd.h  IFaceDetectorPlugin.h  IImageProcessorPlugin.h  IPlugin.h  PluginManager.cpp  PluginManager.h
Core/Plugins/Default/: DefaultFaceDetectorPlugin.cpp  DefaultFaceDetectorPlugin.h  DefaultImageProcessorPlugin.cpp  DefaultImageProcessorPlugin.h
Demo/: DemoController.cpp  DemoController.h  DemoWindow.cpp  DemoWindow.h  main_demo.cpp
IO/: AsyncImageLoader.cpp  ImageReader.cpp  LoadResult.h
Modules/: Core.AIFaceDetector.cppm  Core.Constants.cppm  Core.EditOperation.cppm  Core.EditStack.cppm  Core.ExposureOperation.cppm  Core.FaceDetector.cppm  Core.ImageProcessor.cpp  Core.ImageProcessor.cppm  Core.LUT.cppm  Core.Orchestrator.cppm  Core.PluginConfiguration.cppm  Core.ProcessingPipeline.cppm  Core.Segmenter.cppm  Core.TypeAliases.cppm  IO.AsyncImageLoader.cppm  IO.ImageReader.cppm  Qt.Wrapper.cppm  UI.ComputeHistogram.cppm  UI.CustomSlider.cppm  UI.FaceRenderingUtils.cppm  UI.HistogramWidget.cppm  UI.ImageViewWidget.cppm  UI.MainWindow.cppm  UI.RecentFilesModel.cppm  UI.SplitScreenWidget.cppm  UI.Utils.ExpectedUtils.cppm  UI.Utils.QtContainers.cppm  UI.Utils.QtSignals.cppm  UI.Utils.QtWrappers.cppm
Shaders/: image.frag  image.vert
Tests/: BenchmarkComparison.cpp  BenchmarkComparison.h  IntegrationTests.cpp  PerformanceBenchmarks.cpp  ShaderTests.cpp  StressTests.cpp  TestAsyncImageLoader.cpp  TestConstants.h  TestCoreComponents.cpp  TestDataGenerator.cpp  TestDataGenerator.h  TestFaceDetector.cpp  TestImageProcessor.cpp  TestImageReader.cpp  TestMainWindow.cpp  TestReportGenerator.cpp  TestReportGenerator.h  VisualRegressionTests.cpp  main_test.cpp
Tests/TestData/: demo_lut.cube  demo_lut_1.cube  strong_test_lut.cube
UI/: ComputeHistogram.cpp  CustomSlider.cpp  FaceRenderingUtils.cpp  HistogramWidget.cpp  ImageViewWidget.cpp  MainWindow.cpp  RecentFilesModel.cpp  SplitScreenWidget.cpp
WebDemo/: index.html
WebDemo/css/: styles.css
WebDemo/js/: app.js  faceDetector.js  histogram.js  imageGenerator.js  imageLoader.js  imageProcessor.js  imageProvider.js  simpleImageProvider.js  splitScreen.js  ui.js
docs/: README.md  index.html  mermaid-height-util.js
scripts/: full-audit.bat  full-audit.sh  pre-commit.bat  pre-commit.sh
workflows/: full-audit.md  pre-commit.md
